--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>
-Mike's Web Apps
+FiZxMiKe's Toy Web Apps
 </title>
 </head>
 <body>
-<h1>Mike's Apps</h1>
+<h1>FiZxMiKe's Toy Web Apps</h1>
+
 Here's a list of fun little apps I have made. Nothing too serious, I just think it's neat that JavaScript can do Computational Physics, and other
 rather intesive Mathematics simply and quickly.
 
@@ -28,14 +29,14 @@ rather intesive Mathematics simply and quickly.
 	<li><a href="MikesFlotExample_v2.html">Interactive (fake) DVH plot with constraint and shape preserving fit</a></li>
 </ul>
 
-<h2>Other</h2>
+<h2>Other (not just JavaScript)</h2>
 <ul>
 	<li><a href="foto/devo.html">Two page (preview) photo album builder</a></li>
 	<li><a href="pureMatlabDRR.zip">A very simple DRR package for MATLAB</a></li>
-	
+
 </ul>
 
 <hr />
-&copy; 2010-2014 Michael M. Folkerts (mfolkerts@physics.ucsd.edu)
+&copy; 2010-2015 Michael M. Folkerts (mfolkerts at physics ucsd edu)
 </body>
 </html>
