updated links to notebooks to show_and_tell

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ rather intesive Mathematics simply and quickly.
 
 <h2>Other (not just JavaScript)</h2>
 <ul>
-	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/cp.js/blob/master/notebooks/DVH_Based_PCA.ipynb">DVH Based PCA</a></li>
-	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/cp.js/blob/master/notebooks/DWH_DVH_Based_PCA.ipynb">DWH DVH Based PCA (w/ T Song)</a></li>
+	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/show_and_tell/blob/master/notebooks/DVH_Based_PCA.ipynb">DVH Based PCA</a></li>
+	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/show_and_tell/blob/master/notebooks/DWH_DVH_Based_PCA.ipynb">DWH DVH Based PCA (w/ T Song)</a></li>
 	<li><a href="foto/devo.html">Two page (preview) photo album builder</a></li>
 	<li><a href="pureMatlabDRR.zip">A very simple DRR package for MATLAB</a></li>
 
