edited links on page, sorted by subject.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ FiZxMiKe's Toy Web Apps
 <h1>FiZxMiKe's Toy Web Apps</h1>
 
 Here's a list of fun little apps I have made. Nothing too serious, I just think it's neat that JavaScript can do Computational Physics, and other
-rather intesive Mathematics simply and quickly.
+rather intesive Mathematics simply and quickly. I also included links to Jupyter Notebooks and some MATLAB code (sorry).
 
 <h2>Physics</h2>
 <h3>Monte Carlo</h3>
@@ -27,18 +27,17 @@ rather intesive Mathematics simply and quickly.
 <ul>
 	<li><a href="MikesFlotExample.html">Interactive (fake) DVH plot with constraint</a></li>
 	<li><a href="MikesFlotExample_v2.html">Interactive (fake) DVH plot with constraint and shape preserving fit</a></li>
+	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/show_and_tell/blob/master/notebooks/DVH_Based_PCA.ipynb">DVH Based PCA</a></li>
+	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/show_and_tell/blob/master/notebooks/DWH_DVH_Based_PCA.ipynb">DWH DVH Based PCA (w/ T Song)</a></li>
+	<li><a href="pureMatlabDRR.zip">A very simple DRR package for MATLAB (sigh)</a></li>
 </ul>
 
 <h2>Other (not just JavaScript)</h2>
 <ul>
-	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/show_and_tell/blob/master/notebooks/DVH_Based_PCA.ipynb">DVH Based PCA</a></li>
-	<li><a href="http://nbviewer.jupyter.org/github/fizxmike/show_and_tell/blob/master/notebooks/DWH_DVH_Based_PCA.ipynb">DWH DVH Based PCA (w/ T Song)</a></li>
 	<li><a href="foto/devo.html">Two page (preview) photo album builder</a></li>
-	<li><a href="pureMatlabDRR.zip">A very simple DRR package for MATLAB</a></li>
-
 </ul>
 
 <hr />
-&copy; 2010-2015 Michael M. Folkerts (mfolkerts at physics ucsd edu)
+&copy; 2010-2016 Michael M. Folkerts (mfolkerts at physics ucsd edu)
 </body>
 </html>
