--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ FiZxMiKe's Toy Web Apps
 <h1>FiZxMiKe's Toy Web Apps</h1>
 
 Here's a list of fun little apps I have made. Nothing too serious, I just think it's neat that JavaScript can do Computational Physics, and other
-rather intesive Mathematics simply and quickly. I also included links to Jupyter Notebooks and some MATLAB code (sorry).
+rather intesive Mathematics simply and quickly. I also included links to Jupyter Notebooks and some MATLAB code (sorry). <a href="https://github.com/fizxmike/show_and_tell">Edit on GitHub</a>.
 
 <h2>Physics</h2>
 <h3>Monte Carlo</h3>
