--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ FiZxMiKe's Toy Web Apps
 <h1>FiZxMiKe's Toy Web Apps</h1>
 
 Here's a list of fun little apps I have made. Nothing too serious, I just think it's neat that JavaScript can do Computational Physics, and other
-rather intesive Mathematics simply and quickly. I also included links to Jupyter Notebooks and some MATLAB code (sorry). <a href="https://github.com/fizxmike/show_and_tell">Edit on GitHub</a>.
+rather intesive Mathematics simply and quickly. I also included links to Jupyter Notebooks and some MATLAB code (sorry) related to my research. <a href="https://github.com/fizxmike/show_and_tell">Edit on GitHub</a>.
 
 <h2>Physics</h2>
 <h3>Monte Carlo</h3>
@@ -32,7 +32,7 @@ rather intesive Mathematics simply and quickly. I also included links to Jupyter
 	<li><a href="pureMatlabDRR.zip">A very simple DRR package for MATLAB (sigh)</a></li>
 </ul>
 
-<h2>Other (not just JavaScript)</h2>
+<h2>Other</h2>
 <ul>
 	<li><a href="foto/devo.html">Two page (preview) photo album builder</a></li>
 </ul>
